--- a/index.html
+++ b/index.html
@@ -3828,8 +3828,7 @@
                 <div class="section-text">
                   <h3 class="title">Ready to get started?</h3>
                   <p>
-                    It only takes a few minutes to register your FREE Bankio
-                    account.
+                    It only takes a few minutes to start your journey with us
                   </p>
                 </div>
                 <a class="cmn-btn" href="">Download document</a
