--- a/index.html
+++ b/index.html
@@ -1181,7 +1181,7 @@
                         class="check d-flex align-items-center justify-content-center"
                         ><img
                           alt="icon"
-                          src="/images/home/check.png"
+                          src="images/home/check.png"
                           src="images/_next-image"
                           width="18"
                           height="18"
