--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
           <div class="container">
             <div class="row d-flex header-area">
               <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="bankioo.vercel.html"
+                <a class="navbar-brand" href="index.html"
                   ><img
                     alt="logo"
                     src="images/home/logo.png"
