--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                       <a
                         class="nav-link"
                         aria-current="page"
-                        href=""
+                        href="index.html"
                         >Home</a
                       >
                     </li>
@@ -465,7 +465,7 @@
                       >
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href=""
+                      <a class="nav-link" aria-current="page" href="contact.html"
                         >Contact Us</a
                       >
                     </li>
