--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
         </div>
       </header>
       <section class="banner-section">
-        <div class="overlay">
+        <div class="overlay" style="background-image: url(images/home/banner-1.png);">
           <div class="banner-content d-flex align-items-center">
             <div class="container">
               <div class="row justify-content-start">
