--- a/contact.html
+++ b/contact.html
@@ -482,7 +482,7 @@
         </div>
       </header>
       <section class="banner-section inner-banner contact">
-        <div class="overlay">
+        <div class="overlay" style="background-image: url(images/contact/contact-banner.png);">
           <div class="banner-content d-flex align-items-center">
             <div class="container">
               <div class="row justify-content-start">
