--- a/contact.html
+++ b/contact.html
@@ -450,12 +450,12 @@
                       >
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href=""
+                      <a class="nav-link" aria-current="page" href="about.html"
                         >About Us</a
                       >
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href=""
+                      <a class="nav-link" aria-current="page" href="service.html"
                         >Services</a
                       >
                     </li>
@@ -493,7 +493,7 @@
                       <nav aria-label="breadcrumb">
                         <ol class="breadcrumb d-flex align-items-center">
                           <li class="breadcrumb-item false">
-                            <a href="bankioo.vercel.html">Home</a>
+                            <a href="index.html">Home</a>
                           </li>
                           <li class="breadcrumb-item active">Contact Us</li>
                         </ol>
@@ -886,8 +886,7 @@
                 <div class="section-text">
                   <h3 class="title">Ready to get started?</h3>
                   <p>
-                    It only takes a few minutes to register your FREE Bankio
-                    account.
+                    It only takes a few minutes to start your journey with us
                   </p>
                 </div>
                 <a class="cmn-btn" href="">Download Document</a
@@ -914,7 +913,7 @@
           >
             <div class="col-xl-3 col-lg-3 col-md-4 col-6">
               <div class="footer-box">
-                <!--<a class="logo" href="bankioo.vercel.html"
+                <!--<a class="logo" href="index.html"
                   ><img
                     alt="logo"
                     srcset="
@@ -993,8 +992,8 @@
               <div class="footer-box">
                 <h5>Company</h5>
                 <ul class="footer-link">
-                  <li><a href="">About Us</a></li>
-                  <li><a href="">Services</a></li>
+                  <li><a href="about.html">About Us</a></li>
+                  <li><a href="service.html">Services</a></li>
                   
                 </ul>
               </div>
@@ -1004,7 +1003,7 @@
                 <h5>Useful Links</h5>
                 <ul class="footer-link">
                   <li><a href="">Fees Structure</a></li>
-                  <li><a href="">About Us</a></li>
+                  <li><a href="about.html">About Us</a></li>
                   <li><a href="">Affiliate Program</a></li>
                   <li><a href="">Blog</a></li>
                 </ul>
