--- a/index.html
+++ b/index.html
@@ -450,12 +450,12 @@
                       >
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href=""
+                      <a class="nav-link" aria-current="page" href="about.html"
                         >About Us</a
                       >
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href=""
+                      <a class="nav-link" aria-current="page" href="service.html"
                         >Services</a
                       >
                     </li>
@@ -1432,7 +1432,7 @@
                   </ul>
                 </div>
                 <div class="button-group d-flex align-items-center flex-wrap">
-                  <a href="bankioo.vercel.html"
+                  <a href="index.html"
                     ><img
                       alt="image"
                       srcset="
@@ -1446,7 +1446,7 @@
                       data-nimg="1"
                       loading="lazy"
                       style="color: transparent" /></a
-                  ><a href="bankioo.vercel.html"
+                  ><a href="index.html"
                     ><img
                       alt="image"
                       srcset="
@@ -1986,7 +1986,7 @@
                               style="color: transparent"
                             />
                           </div>
-                          <a href="bankioo.vercel.html"
+                          <a href="index.html"
                             ><h5>Secured Cards</h5></a
                           >
                         </div>
@@ -2024,7 +2024,7 @@
                               style="color: transparent"
                             />
                           </div>
-                          <a href="bankioo.vercel.html"
+                          <a href="index.html"
                             ><h5>Balance Transfer</h5></a
                           >
                         </div>
@@ -2062,7 +2062,7 @@
                               style="color: transparent"
                             />
                           </div>
-                          <a href="bankioo.vercel.html"><h5>Travel</h5></a>
+                          <a href="index.html"><h5>Travel</h5></a>
                         </div>
                       </div>
                       <div class="col-md-6">
@@ -2098,7 +2098,7 @@
                               style="color: transparent"
                             />
                           </div>
-                          <a href="bankioo.vercel.html"><h5>Cashback</h5></a>
+                          <a href="index.html"><h5>Cashback</h5></a>
                         </div>
                       </div>
                     </div>
@@ -2143,7 +2143,7 @@
                               style="color: transparent"
                             />
                           </div>
-                          <a href="bankioo.vercel.html"
+                          <a href="index.html"
                             ><h5>Secured Cards</h5></a
                           >
                         </div>
@@ -2181,7 +2181,7 @@
                               style="color: transparent"
                             />
                           </div>
-                          <a href="bankioo.vercel.html"
+                          <a href="index.html"
                             ><h5>Balance Transfer</h5></a
                           >
                         </div>
@@ -2219,7 +2219,7 @@
                               style="color: transparent"
                             />
                           </div>
-                          <a href="bankioo.vercel.html"><h5>Travel</h5></a>
+                          <a href="index.html"><h5>Travel</h5></a>
                         </div>
                       </div>
                       <div class="col-md-6">
@@ -2255,7 +2255,7 @@
                               style="color: transparent"
                             />
                           </div>
-                          <a href="bankioo.vercel.html"><h5>Cashback</h5></a>
+                          <a href="index.html"><h5>Cashback</h5></a>
                         </div>
                       </div>
                     </div>
@@ -3425,7 +3425,7 @@
                       efficitur velit vel pharetra.
                     </p>
                     <div class="read">
-                      <a class="btn-arrow" href="bankioo.vercel.html"
+                      <a class="btn-arrow" href="index.html"
                         >Read more<img
                           alt="arrow"
                           srcset="
@@ -3512,7 +3512,7 @@
                       efficitur velit vel pharetra.
                     </p>
                     <div class="read">
-                      <a class="btn-arrow" href="bankioo.vercel.html"
+                      <a class="btn-arrow" href="index.html"
                         >Read more<img
                           alt="arrow"
                           srcset="
@@ -3599,7 +3599,7 @@
                       efficitur velit vel pharetra.
                     </p>
                     <div class="read">
-                      <a class="btn-arrow" href="bankioo.vercel.html"
+                      <a class="btn-arrow" href="index.html"
                         >Read more<img
                           alt="arrow"
                           srcset="
@@ -3858,7 +3858,7 @@
           >
             <div class="col-xl-3 col-lg-3 col-md-4 col-6">
               <div class="footer-box">
-                <!--<a class="logo" href="bankioo.vercel.html"
+                <!--<a class="logo" href="index.html"
                   ><img
                     alt="logo"
                     srcset="
@@ -3937,8 +3937,8 @@
               <div class="footer-box">
                 <h5>Company</h5>
                 <ul class="footer-link">
-                  <li><a href="">About Us</a></li>
-                  <li><a href="">Services</a></li>
+                  <li><a href="about.html">About Us</a></li>
+                  <li><a href="service.html">Services</a></li>
                   
                 </ul>
               </div>
@@ -3948,7 +3948,7 @@
                 <h5>Useful Links</h5>
                 <ul class="footer-link">
                   <li><a href="">Fees Structure</a></li>
-                  <li><a href="">About Us</a></li>
+                  <li><a href="about.html">About Us</a></li>
                   <li><a href="">Affiliate Program</a></li>
                   <li><a href="">Blog</a></li>
                 </ul>
