--- a/about.html
+++ b/about.html
@@ -469,7 +469,7 @@
                       >
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href=""
+                      <a class="nav-link" aria-current="page" href="fees.html"
                         >Fees Structure</a
                       >
                     </li>
@@ -2797,8 +2797,8 @@
               <div class="footer-box">
                 <h5>Useful Links</h5>
                 <ul class="footer-link">
-                  <li><a href="">Fees Structure</a></li>
-                  <li><a href="">About Us</a></li>
+                  <li><a href="fees.html">Fees Structure</a></li>
+                  <li><a href="about.html">About Us</a></li>
                   <li><a href="">Affiliate Program</a></li>
                   <li><a href="">Blog</a></li>
                 </ul>
