--- a/index.html
+++ b/index.html
@@ -1333,7 +1333,7 @@
         <div class="row">
         <div class="col-md-12">
           <div class="section-header text-center">
-            <h4 class="sub-title">Trading Instruments</h4>
+            <h4 class="sub-title" style="margin-top: 30px;">Trading Instruments</h4>
           </div>  
         <div class="elements-in-row-block">
         
