--- a/about.html
+++ b/about.html
@@ -518,7 +518,7 @@
           </div>
         </div>
       </section>
-      <!--<section class="about-section">
+      <section class="about-section">
         <div class="overlay pt-120 pb-120">
           <div class="container wow fadeInUp">
             <div class="row align-items-center">
@@ -526,21 +526,21 @@
                 <div class="text-area">
                   <h5 class="sub-title">About Us</h5>
                   <h2 class="title">
-                    Your ally in achieving ambition beyond borders
+                    We are proud ! </br> to serve you for 15 years.
                   </h2>
                   <p>
-                    We understand that with global ambition, comes global
-                    challenges, and we are here to bridge the gap by offering
-                    seamless cross-border financial services. Consider us your
-                    friendly digital guide to all things finance, helping you
-                    make the most of your money.
+                    We are proud to say that we have been a leading player in the forex market for over 12 years, 
+                    and during that time we have achieved great success.Our team of experienced traders and analysts 
+                    have consistently demonstrated their ability to navigate the volatile and fast-paced forex market, 
+                    using a combination of technical analysis, fundamental analysis, and risk management strategies to 
+                    generate impressive returns for our clients.
                   </p>
                 </div>
                 <div class="row cus-mar">
                   <div class="col-xl-4 col-md-4">
                     <div class="count-content text-center">
                       <div class="count-number">
-                        <h4 class="counter">98</h4>
+                        <h4 class="counter">100</h4>
                         <h4 class="static">%</h4>
                       </div>
                       <p>Customer satisfaction</p>
@@ -549,19 +549,19 @@
                   <div class="col-xl-4 col-md-4">
                     <div class="count-content text-center">
                       <div class="count-number">
-                        <h4 class="counter">250</h4>
-                        <h4 class="static">M</h4>
+                        <h4 class="counter">100</h4>
+                        <h4 class="static">+</h4>
                       </div>
-                      <p>Monthly active users</p>
+                      <p>Accounts handled</p>
                     </div>
                   </div>
                   <div class="col-xl-4 col-md-4">
                     <div class="count-content text-center">
                       <div class="count-number">
                         <h4 class="counter">100</h4>
-                        <h4 class="static">K</h4>
+                        <h4 class="static">$</h4>
                       </div>
-                      <p>New Users per week</p>
+                      <p>Profit earned per hour</p>
                     </div>
                   </div>
                 </div>
@@ -616,7 +616,7 @@
             </div>
           </div>
         </div>
-      </section>-->
+      </section>
       <section class="our-core-values">
         <div class="overlay pt-120 pb-120">
           <div class="container wow fadeInUp">
@@ -628,81 +628,15 @@
                     Our values help us set the bar for perfect trading.
                   </h2>
                   <p>
-                    Gain an edge in the market with our advanced tools and
-                    resources
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="row cus-mar">
-              <div class="col-xl-4 col-md-4">
-                <div class="single-box">
-                  <div class="icon-box">
-                    <img
-                      alt="icon"
-                      src="images/about/rating.png"
-                      src="images/_next-image"
-                      width="60"
-                      height="60"
-                      decoding="async"
-                      data-nimg="1"
-                      loading="lazy"
-                      style="color: transparent"
-                    />
-                  </div>
-                  <h5>Our Experience</h5>
-                  <p>
-                    For respected banks, we have more than 12 years of
-                    experience in the currency market in strategy and technical
-                    forecasts.
-                  </p>
-                </div>
-              </div>
-              <div class="col-xl-4 col-md-4">
-                <div class="single-box">
-                  <div class="icon-box">
-                    <img
-                      alt="icon"
-                      src="images/about/customer.png"
-                      src="images/_next-image"
-                      width="60"
-                      height="60"
-                      decoding="async"
-                      data-nimg="1"
-                      loading="lazy"
-                      style="color: transparent"
-                    />
-                  </div>
-                  <h5>Why us?</h5>
-                  <p>
-                    Our service for customers in financial trouble is currently operational.
-                  </p>
-                </div>
-              </div>
-              <div class="col-xl-4 col-md-4">
-                <div class="single-box">
-                  <div class="icon-box">
-                    <img
-                      alt="icon"
-                      src="images/about/licensing.png"
-                      src="images/_next-image"
-                      width="60"
-                      height="60"
-                      decoding="async"
-                      data-nimg="1"
-                      loading="lazy"
-                      style="color: transparent"
-                    />
-                  </div>
-                  <h5>What we trade?</h5>
-                  <p>
-                    We only trade through licenced broker accounts.
+                    Over the years, we have built a reputation for being reliable, transparent, and trustworthy. We have always been committed to providing our clients with the highest levels of customer service, and we take pride in the fact that many of our clients have been with us for years.
+                    We also believe in transparency and accountability. We are committed to providing our clients with regular updates on our trading performance, and we always ensure that our trading strategies are profitable.
+                    We understand that forex trading can be a complex and highly volatile, but with our proven system and expert guidance, we can help you achieve your financial goals. Whether you're looking to supplement your income, we are here to help.
+                    Overall, our success in the forex market is a testament to our commitment to excellence and our focus on delivering superior customer service. We look forward to continuing to serve our clients and helping them achieve their financial goals through forex trading.
                   </p>
                 </div>
               </div>
             </div>
           </div>
-        </div>
       </section>
       <!--<section class="map-section">
         <div class="overlay pt-120 pb-120">
