--- a/service.html
+++ b/service.html
@@ -470,11 +470,6 @@
                           >
                         </li>
                       </ul>
-                      <div
-                        class="right-area header-action d-flex align-items-center"
-                      >
-                        <a class="cmn-btn" href="">Download document</a>
-                      </div>
                     </div>
                   </nav>
                 </div>
@@ -581,9 +576,23 @@
                   </div>
                   <h5>Pamm Account</h5>
                   <p>
-                    We manage all types of Pamm accounts.Challenge account <br>(conditions apply).
+                    We manage all types of Pamm accounts.Challenge account.
                   </p>
                 </div>
+              </div>
+            </div>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-lg-9">
+              <div class="section-header text-center">
+                <p style="margin-top: 50px;">
+                  At our forex trading firm, we offer a comprehensive range of account management services to suit the unique needs of our clients. Whether you are an individual trader, a corporation, or a professional money manager, we have the expertise and experience to help you achieve your investment goals.
+                  We specialize in managing individual accounts, providing personalized trading strategies tailored to your specific needs. For corporate clients, we offer customized solutions that help you to optimize your cash flows. For professional money managers, our PAMM accounts offer a flexible and efficient way to manage multiple client accounts with ease.
+                  With over a decade of experience in the forex market, we have a proven track record of success and a deep understanding of the unique challenges and opportunities of this dynamic market. 
+                </p>
+                <h5 class="sub-title" style="margin-top: 20px;">
+                  Contact us today to learn more about how we can help you achieve your </br> forex trading goals.
+                </h5>
               </div>
             </div>
           </div>
