--- a/index.html
+++ b/index.html
@@ -515,15 +515,15 @@
           <input type="radio" name="carousel" id="slide-btn-4" class="slide-btn" onclick="setInt();" />
           <input type="radio" name="carousel" id="slide-btn-5" class="slide-btn" onclick="setInt();" />
           <div class="slide one parallax-effect"><h1>Slide 1</h1>
-            <div class="credit">Made with <span style="color:tomato">❤</span> by <a href="https://www.learningrobo.com/">Learning Robo</a></div></div>
+            <div class="credit">Made with <span style="color:tomato">❤</span> by <a href="https://www.learningrobo.com/">Foxital</a></div></div>
           <div class="slide two parallax-effect"><h1>Slide 2</h1>
-            <div class="credit">Made with <span style="color:tomato">❤</span> by <a href="https://www.learningrobo.com/">Learning Robo</a></div></div>
+            <div class="credit">Made with <span style="color:tomato">❤</span> by <a href="https://www.learningrobo.com/">Foxital</a></div></div>
           <div class="slide three parallax-effect"><h1>Slide 3</h1>
-            <div class="credit">Made with <span style="color:tomato">❤</span> by <a href="https://www.learningrobo.com/">Learning Robo</a></div></div>
+            <div class="credit">Made with <span style="color:tomato">❤</span> by <a href="https://www.learningrobo.com/">Foxital</a></div></div>
           <div class="slide four parallax-effect"><h1>Slide 4</h1>
-            <div class="credit">Made with <span style="color:tomato">❤</span> by <a href="https://www.learningrobo.com/">Learning Robo</a></div></div>
+            <div class="credit">Made with <span style="color:tomato">❤</span> by <a href="https://www.learningrobo.com/">Foxital</a></div></div>
           <div class="slide five parallax-effect"><h1>Slide 5</h1>
-            <div class="credit">Made with <span style="color:tomato">❤</span> by <a href="https://www.learningrobo.com/">Learning Robo</a></div></div>
+            <div class="credit">Made with <span style="color:tomato">❤</span> by <a href="https://www.learningrobo.com/">Foxital</a></div></div>
           <div class="labels">
             <label for="slide-btn-1"></label>
             <label for="slide-btn-2"></label>
