--- a/faq.html
+++ b/faq.html
@@ -517,6 +517,11 @@
                       >
                     </li>
                     <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="faq.html"
+                        >FAQ</a
+                      >
+                    </li>
+                    <li class="nav-item">
                       <a
                         class="nav-link"
                         aria-current="page"
@@ -538,15 +543,12 @@
               <div class="row justify-content-start">
                 <div class="col-lg-7 col-md-10">
                   <div class="main-content">
-                    <h1>Faqs</h1>
+                    <h1 style="color: #fff;">Faqs</h1>
                     <div class="breadcrumb-area">
                       <nav aria-label="breadcrumb">
                         <ol class="breadcrumb d-flex align-items-center">
                           <li class="breadcrumb-item false">
-                            <a href="">Home</a>
-                          </li>
-                          <li class="breadcrumb-item false">
-                            <a href="">Pages</a>
+                            <a href="" style="color: #fff;">Home</a>
                           </li>
                           <li class="breadcrumb-item active">Faqs</li>
                         </ol>
