--- a/index.html
+++ b/index.html
@@ -496,6 +496,11 @@
                       >
                     </li>
                     <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="faq.html"
+                        >FAQ</a
+                      >
+                    </li>
+                    <li class="nav-item">
                       <a class="nav-link" aria-current="page" href="contact.html"
                         >Contact Us</a
                       >
@@ -1179,13 +1184,13 @@
           <div class="row justify-content-center">
             <div class="col-lg-10">
               <div class="section-header text-center">
-                <h5 class="sub-title">
+                <h5 class="sub-title" style="color: #fff;">
                   Are you tired of struggling to make consistent profits in the forex market?
                 </h5>
-                <h2 class="title">
+                <h2 class="title" style="color: #fff;">
                   Look no further!
                 </h2>
-                <p class="top-para">
+                <p class="top-para" style="color: #fff;">
                   Our team of experienced traders and analysts have developed a proven system that consistently generates profitable trades.
                 </p>
               </div>
