--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+#f5faff
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -26,6 +27,7 @@
       as="style"
     />
     <link rel="stylesheet" href="css/css-706e79a094b4a8e8.css" data-n-p="" />
+    <link rel="stylesheet" href="css/css-ionicons.min.css" type="text/css" media="all">
     <noscript data-n-css=""></noscript>
     <script
       defer
@@ -45,6 +47,10 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="js/script.js" defer></script>
     <script src="js/index.js" defer></script>
+    <script src="js/vendor-jquery.min.js" defer></script>
+    <script src="js/out-footer-534f9eae5134b7596caefb7be166e196f7a746d7.min.js" defer></script>
+    <script src="js/out-header-56273857dcf8e45a17487ec942829cc390b0cb95.min.js" defer></script>
+
 
     <style
       data-href="https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
@@ -395,6 +401,32 @@
   </head>
   <body>
     <div id="__next">
+      <div class="topbar">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+            </div>
+            <div class="col-md-6">
+              <div class="topbar-menu">
+                <ul class="topbar-menu">
+                  <li><a href="">Become a Partner</a></li>
+                  <li><a href="faq.html">Need Help?</a></li>
+                  <li><a href="">+91 123456789</a></li>
+                  <li class="dropdown">
+										<a href="#">Languages</a>
+										<ul class="sub-menu">
+											<li><a href="#">English</a></li>
+											<li><a href="#">French</a></li>
+                      <li><a href="#">Spanish</a></li>
+                      <li><a href="#">Arab</a></li>
+										</ul>
+									</li> 
+                 </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <header class="header-section false" id="header">
         <div class="overlay">
           <div class="container">
@@ -465,16 +497,16 @@
                       >
                     </li>
                     <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="faq.html"
+                        >FAQ</a
+                      >
+                    </li>
+                    <li class="nav-item">
                       <a class="nav-link" aria-current="page" href="contact.html"
                         >Contact Us</a
                       >
                     </li>
                   </ul>
-                  <div
-                    class="right-area header-action d-flex align-items-center"
-                  >
-                    <a class="cmn-btn" href="">Download document</a>
-                  </div>
                 </div>
               </nav>
             </div>
@@ -488,12 +520,12 @@
               <div class="row justify-content-start">
                 <div class="col-lg-7 col-md-10">
                   <div class="main-content">
-                    <h1>Contact Us</h1>
+                    <h1 style="color: #fff;">Contact Us</h1>
                     <div class="breadcrumb-area">
                       <nav aria-label="breadcrumb">
                         <ol class="breadcrumb d-flex align-items-center">
                           <li class="breadcrumb-item false">
-                            <a href="index.html">Home</a>
+                            <a href="index.html" style="color: #fff;">Home</a>
                           </li>
                           <li class="breadcrumb-item active">Contact Us</li>
                         </ol>
