--- a/index.html
+++ b/index.html
@@ -520,15 +520,15 @@
           <input type="radio" name="carousel" id="slide-btn-4" class="slide-btn" onclick="setInt();" />
           <input type="radio" name="carousel" id="slide-btn-5" class="slide-btn" onclick="setInt();" />
           <div class="slide one parallax-effect"><h1>Slide 1</h1>
-            <div class="credit">Made with <span style="color:tomato">❤</span> by <a href="https://www.learningrobo.com/">Foxital</a></div></div>
+            <div class="credit">Made with <span style="color:tomato">❤</span> by <a href="https://www.foxital.in/">Foxital</a></div></div>
           <div class="slide two parallax-effect"><h1>Slide 2</h1>
-            <div class="credit">Made with <span style="color:tomato">❤</span> by <a href="https://www.learningrobo.com/">Foxital</a></div></div>
+            <div class="credit">Made with <span style="color:tomato">❤</span> by <a href="https://www.foxital.in/">Foxital</a></div></div>
           <div class="slide three parallax-effect"><h1>Slide 3</h1>
-            <div class="credit">Made with <span style="color:tomato">❤</span> by <a href="https://www.learningrobo.com/">Foxital</a></div></div>
+            <div class="credit">Made with <span style="color:tomato">❤</span> by <a href="https://www.foxital.in/">Foxital</a></div></div>
           <div class="slide four parallax-effect"><h1>Slide 4</h1>
-            <div class="credit">Made with <span style="color:tomato">❤</span> by <a href="https://www.learningrobo.com/">Foxital</a></div></div>
+            <div class="credit">Made with <span style="color:tomato">❤</span> by <a href="https://www.foxital.in/">Foxital</a></div></div>
           <div class="slide five parallax-effect"><h1>Slide 5</h1>
-            <div class="credit">Made with <span style="color:tomato">❤</span> by <a href="https://www.learningrobo.com/">Foxital</a></div></div>
+            <div class="credit">Made with <span style="color:tomato">❤</span> by <a href="https://www.foxital.in/">Foxital</a></div></div>
           <div class="labels">
             <label for="slide-btn-1"></label>
             <label for="slide-btn-2"></label>
@@ -538,7 +538,7 @@
           </div>
         </div>
       
-        <div class="home-stats-block panel-row-style panel-row-style-for-18601-1">
+        <div class="home-stats-block panel-row-style panel-row-style-for-18601-1 bg"> 
           <div id="panel-18601-1-0-0" class="so-panel widget widget_home_stats_widget_2 panel-first-child" data-index="1"><div class="panel-widget-style panel-widget-style-for-18601-1-0-0"><div class="so-widget-home_stats_widget_2 so-widget-home_stats_widget_2-default-d75171398898-18601"> <div class="container">
           <div class="row">
           <div class="col-md-12">
@@ -1203,11 +1203,11 @@
                   <h2 class="title">
                   Our strategies!
                 </h2>
-                <p class="top-para">
+                <p class="top-para" style="text-align: justify;">
                   Our trading strategies are based on a combination of technical analysis, quantitative analysis, statistical analysis, Economic analysis, MacroEconomic analysis, and risk management principles. We carefully analyze market trends to identify high-probability trading opportunities.
                 </p>
-                <h5 class="sub-title" style="margin-top: 40px;">
-                  Join our community of successful traders today </br> and start profiting from the forex market!
+                <h5 class="sub-title" style="margin-top: 40px;" style="text-align: justify;">
+                  Join our community of successful traders today and start profiting from the forex market!
                 </h5>  
                 </div>
               </div>
