--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
           </div>
         </div>
       
-        <div class="home-stats-block panel-row-style panel-row-style-for-18601-1 bg"> 
+        <div class="home-stats-block panel-row-style panel-row-style-for-18601-1" style="background: url(/images/home/pattern.png) repeat;"> 
           <div id="panel-18601-1-0-0" class="so-panel widget widget_home_stats_widget_2 panel-first-child" data-index="1"><div class="panel-widget-style panel-widget-style-for-18601-1-0-0"><div class="so-widget-home_stats_widget_2 so-widget-home_stats_widget_2-default-d75171398898-18601"> <div class="container">
           <div class="row">
           <div class="col-md-12">
