--- a/faq.html
+++ b/faq.html
@@ -569,7 +569,7 @@
                 <div class="section-header text-center">
                   <h5 class="sub-title">If you have question,we have answer</h5>
                   <h2 class="title">Frequently asked questions</h2>
-                  <p>
+                  <p style="letter-spacing: 0em;  font-size:20px">
                     Get answers to all questions you have and boost your
                     knowledge so you can save, invest and spend smarter.
                   </p>
@@ -1243,7 +1243,7 @@
           </div>
         </div>
       </section>
-      <section class="get-start wow fadeInUp">
+      <!--<section class="get-start wow fadeInUp">
         <div class="overlay">
           <div class="container">
             <div class="col-12">
@@ -1270,7 +1270,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section>-->
       <div class="footer-section">
         <div class="container pt-120">
           <div
