--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
           </div>
         </div>
       
-        <div class="home-stats-block panel-row-style panel-row-style-for-18601-1" style="background: url(/images/home/pattern.png) repeat;"> 
+        <div class="home-stats-block panel-row-style panel-row-style-for-18601-1" style="background: url(images/home/pattern.png) repeat;"> 
           <div id="panel-18601-1-0-0" class="so-panel widget widget_home_stats_widget_2 panel-first-child" data-index="1"><div class="panel-widget-style panel-widget-style-for-18601-1-0-0"><div class="so-widget-home_stats_widget_2 so-widget-home_stats_widget_2-default-d75171398898-18601"> <div class="container">
           <div class="row">
           <div class="col-md-12">
@@ -1184,13 +1184,13 @@
           <div class="row justify-content-center">
             <div class="col-lg-10">
               <div class="section-header text-center">
-                <h5 class="sub-title" style="color: #fff;">
+                <h5 class="sub-title" style="color: #fff; letter-spacing: 0em; line-height:1.5em;">
                   Are you tired of struggling to make consistent profits in the forex market?
                 </h5>
                 <h2 class="title" style="color: #fff;">
                   Look no further!
                 </h2>
-                <p class="top-para" style="color: #fff;">
+                <p class="top-para" style="color: #fff;  letter-spacing: 0em; line-height:1.5em; font-size:22px">
                   Our team of experienced traders and analysts have developed a proven system that consistently generates profitable trades.
                 </p>
               </div>
@@ -1203,10 +1203,10 @@
                   <h2 class="title">
                   Our strategies!
                 </h2>
-                <p class="top-para" style="text-align: justify;">
+                <p class="top-para" style="letter-spacing: 0em; line-height:2em; font-size:22px">
                   Our trading strategies are based on a combination of technical analysis, quantitative analysis, statistical analysis, Economic analysis, MacroEconomic analysis, and risk management principles. We carefully analyze market trends to identify high-probability trading opportunities.
                 </p>
-                <h5 class="sub-title" style="margin-top: 40px;" style="text-align: justify;">
+                <h5 class="sub-title" style="margin-top: 40px; ">
                   Join our community of successful traders today and start profiting from the forex market!
                 </h5>  
                 </div>
@@ -1216,6 +1216,83 @@
          </div>
       </div>
     </section> 
+    <section class="account-feature features">
+        <div class="overlay pt-120 pb-120">
+          <div class="container wow fadeInUp">
+            <div class="row justify-content-center">
+              <div class="col-lg-9">
+                <div class="section-header text-center">
+                  <h5 class="sub-title" style="font-size: 20px;">
+                    Why we ?
+                  </h5>
+                  <h2 class="title">
+                    Discover the World of Forex Trading with Us
+                  </h2>
+                  <p style="letter-spacing: 0em; line-height:2em; font-size:22px">
+                    As a leading Forex broker, we pride ourselves on providing our clients with a reliable, transparent, and secure trading environment. We understand that Forex trading can be complex, which is why we offer a wide range of educational resources, expert analysis, and trading tools to help you make informed decisions and achieve your financial goals.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="row cus-mar">
+              <div class="col-md-4">
+                <div class="single-box">
+                  <div class="icon-box">
+                    <img
+                      alt="icon"
+                      src="images/home/highlights/account.svg"
+                      src="images/_next-image"
+                      width="50"
+                      height="50"
+                      decoding="async"
+                      data-nimg="1"
+                      loading="lazy"
+                      style="color: transparent"
+                    />
+                  </div>
+                  <h5>Multiple Account Types</h5>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="single-box">
+                  <div class="icon-box">
+                    <img
+                      alt="icon"
+                      src="images/home/highlights/platform.svg"
+                      src="images/_next-image"
+                      width="50"
+                      height="50"
+                      decoding="async"
+                      data-nimg="1"
+                      loading="lazy"
+                      style="color: transparent"
+                    />
+                  </div>
+                  <h5>Advanced Trading Platforms</h5>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="single-box">
+                  <div class="icon-box">
+                    <img
+                      alt="icon"
+                      src="images/home/highlights/service.svg"
+                      src="images/_next-image"
+                      width="50"
+                      height="50"
+                      decoding="async"
+                      data-nimg="1"
+                      loading="lazy"
+                      style="color: transparent"
+                    />
+                  </div>
+                  <h5>Personalized Support</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <!--<section class="features-section">
         <div class="overlay pt-120">
           <div class="container wow fadeInUp">
