--- a/index.html
+++ b/index.html
@@ -523,36 +523,36 @@
             <picture>
               <source 
                  media="(orientation: landscape)"
-                 srcset="../images/home/banner/eng-1-lap.png">
+                 srcset="images/home/banner/eng-1-lap.png">
               <source 
                  media="(orientation: portrait)"
-                 srcset="../images/home/banner/eng-1-phone.png">
-              <img src="../images/home/banner/eng-1-lap.png" 
-              alt="a cute kitten">
+                 srcset="images/home/banner/eng-1-phone.png">
+              <img src="images/home/banner/eng-1-lap.png" 
+              alt="Banner 1">
            </picture>
           </div>
           <div class="slide two">
             <picture>
               <source 
                  media="(orientation: landscape)"
-                 srcset="../images/home/banner/eng-2-lap.png">
+                 srcset="images/home/banner/eng-2-lap.png">
               <source 
                  media="(orientation: portrait)"
-                 srcset="../images/home/banner/eng-2-phone.png">
-              <img src="../images/home/banner/eng-2-lap.png" 
-              alt="a cute kitten">
+                 srcset="images/home/banner/eng-2-phone.png">
+              <img src="images/home/banner/eng-2-lap.png" 
+              alt="Banner 2">
            </picture>
           </div>
           <div class="slide three">
             <picture>
               <source 
                  media="(orientation: landscape)"
-                 srcset="../images/home/banner/eng-3-lap.png">
+                 srcset="images/home/banner/eng-3-lap.png">
               <source 
                  media="(orientation: portrait)"
-                 srcset="../images/home/banner/eng-3-phone.png">
-              <img src="../images/home/banner/eng-3-lap.png" 
-              alt="a cute kitten">
+                 srcset="images/home/banner/eng-3-phone.png">
+              <img src="images/home/banner/eng-3-lap.png" 
+              alt="Banner 3">
            </picture>
           </div>
 
